Update image references

--- a/D1_descriptive_statistics_code_along.ipynb
+++ b/D1_descriptive_statistics_code_along.ipynb
@@ -14,6 +14,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# <a id='toc1_'></a>[Key items for this class: <span style=\"color:red\">numerical</span>, <span style=\"color:orange\">categorical</span>, <span style=\"color:yellow\">continuous</span>, <span style=\"color:green\">discrete</span>, <span style=\"color:blue\">percentile</span>, <span style=\"color:purple\">outlier</span> + more terminology](#toc0_)"
    ]
@@ -673,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image (9).png](<image (9) f.png>)"
+    "![image (9).png](https://github.com/sabinagio/data-analytics/blob/main/images/distribution_variability.png?raw=True)"
    ]
   },
   {
@@ -686,7 +691,7 @@
     "\n",
     "> The graphs below display the distribution of delivery times and provide the answer. \n",
     " \n",
-    "![image (10).png](<image (10).png>)![image (11).png](<image (11).png>)"
+    "![image (10).png](https://github.com/sabinagio/data-analytics/blob/main/images/pizza_high_variability.png?raw=True)![image (11).png](https://github.com/sabinagio/data-analytics/blob/main/images/pizza_low_variability.png?raw=True)"
    ]
   },
   {
@@ -813,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image (9).png](<image (9).png>)"
+    "![image (9).png](https://github.com/sabinagio/data-analytics/blob/main/images/outlier_boxplot.png?raw=True)"
    ]
   },
   {
@@ -864,7 +869,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image (12).png](<image (12).png>)"
+    "![image (12).png](https://github.com/sabinagio/data-analytics/blob/main/images/skewness.png?raw=True)"
    ]
   },
   {
@@ -978,7 +983,7 @@
    "source": [
     "We can also get an idea of skewness from box plots:  \n",
     "\n",
-    "![image (13).png](<image (13).png>)"
+    "![image (13).png](https://github.com/sabinagio/data-analytics/blob/main/images/quartiles_distributions_box_plots.png?raw=True)"
    ]
   },
   {
@@ -1084,7 +1089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image (9) g.png](<image (9) g.png>)"
+    "![image (9) g.png](https://github.com/sabinagio/data-analytics/blob/main/images/chebyshev_distribution.png?raw=true)"
    ]
   },
   {
@@ -1098,7 +1103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image (9) d.png](<image (9) d.png>)"
+    "![image (9) d.png](https://github.com/sabinagio/data-analytics/blob/main/images/chebyshev_table.png?raw=true)"
    ]
   },
   {
