--- a/week 5/D2_EDA_case_study_code_along.ipynb
+++ b/week 5/D2_EDA_case_study_code_along.ipynb
@@ -24,6 +24,11 @@
     "    - [How is our data segmented?](#toc1_2_3_)    \n",
     "    - [Do each of the loan types correspond to a specific type of client?](#toc1_2_4_)    \n",
     "    - [How does each of our segment look like?](#toc1_2_5_)    \n",
+    "    - [Is `small_corp_variable` a segment worth exploring?](#toc1_2_6_)    \n",
+    "    - [Why is the `small_corp_variable` segment so different from the rest?](#toc1_2_7_)    \n",
+    "    - [How do we pick the high-value customers?](#toc1_2_8_)    \n",
+    "    - [Why do we have such high variance at low volumes?](#toc1_2_9_)    \n",
+    "    - [What changed over time?](#toc1_2_10_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -275,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Is `small_corp_variable` a segment worth exploring?"
+    "### <a id='toc1_2_6_'></a>[Is `small_corp_variable` a segment worth exploring?](#toc0_)"
    ]
   },
   {
@@ -298,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why is the `small_corp_variable` segment so different from the rest?"
+    "### <a id='toc1_2_7_'></a>[Why is the `small_corp_variable` segment so different from the rest?](#toc0_)"
    ]
   },
   {
@@ -396,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How do we pick the high-value customers?"
+    "### <a id='toc1_2_8_'></a>[How do we pick the high-value customers?](#toc0_)"
    ]
   },
   {
@@ -410,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why do we have such high variance at low volumes?"
+    "### <a id='toc1_2_9_'></a>[Why do we have such high variance at low volumes?](#toc0_)"
    ]
   },
   {
@@ -442,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What changed over time?"
+    "### <a id='toc1_2_10_'></a>[What changed over time?](#toc0_)"
    ]
   },
   {
