--- a/week 6/D3_API_wrappers_revision.ipynb
+++ b/week 6/D3_API_wrappers_revision.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt text](image.png)"
+    "![Alt text](../images/twitter_api.png)"
    ]
   },
   {
