--- a/week 6/D3_API_wrappers_revision.ipynb
+++ b/week 6/D3_API_wrappers_revision.ipynb
@@ -16,8 +16,12 @@
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
     "- [API Wrappers](#toc1_)    \n",
-    "- [Twitter API: RIP](#toc2_)    \n",
+    "- [Twitter API: RIP ⚰️](#toc2_)    \n",
     "- [Google Sheets API: A new beginning](#toc3_)    \n",
+    "  - [Setup](#toc3_1_)    \n",
+    "  - [Accessing a spreadsheet (look, mom, no credentials!)](#toc3_2_)    \n",
+    "  - [Handling credentials in mini-production](#toc3_3_)    \n",
+    "  - [`gspread` API wrapper, here to make life easier](#toc3_4_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -103,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## <a id='toc3_1_'></a>[Setup](#toc0_)"
    ]
   },
   {
@@ -143,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accessing a spreadsheet (look, mom, no credentials!)"
+    "## <a id='toc3_2_'></a>[Accessing a spreadsheet (look, mom, no credentials!)](#toc0_)"
    ]
   },
   {
@@ -221,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Handling credentials in mini-production"
+    "## <a id='toc3_3_'></a>[Handling credentials in mini-production](#toc0_)"
    ]
   },
   {
@@ -290,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `gspread` API wrapper, here to make life easier"
+    "## <a id='toc3_4_'></a>[`gspread` API wrapper, here to make life easier](#toc0_)"
    ]
   },
   {
