Update ToC, GIF

--- a/week 7/D1_Selenium_revision.ipynb
+++ b/week 7/D1_Selenium_revision.ipynb
@@ -14,9 +14,10 @@
         "      - [What is the job position you want to search for?](#toc2_1_3_1_)    \n",
         "      - [What is the job location you want to search for?](#toc2_1_3_2_)    \n",
         "      - [Can we find what we need from the HTML?](#toc2_1_3_3_)    \n",
+        "      - [Loop through the available pages](#toc2_1_3_4_)    \n",
         "  - [Extra: Do the scraping using Selenium](#toc2_2_)    \n",
         "  - [Extra: Save cookies in a pickle 🥒](#toc2_3_)    \n",
-        "- [References & Acknowledgments](#toc3_)    \n",
+        "- [References/Acknowledgments](#toc3_)    \n",
         "\n",
         "<!-- vscode-jupyter-toc-config\n",
         "\tnumbering=false\n",
@@ -81,7 +82,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![Job](https://media.giphy.com/media/dgg13lkNAUa5eibLiY/giphy.gif)"
+        "<iframe src=\"https://giphy.com/embed/dgg13lkNAUa5eibLiY\" width=\"480\" height=\"270\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/dgg13lkNAUa5eibLiY\">via GIPHY</a></p>"
       ]
     },
     {
@@ -510,7 +511,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Loop through the available pages"
+        "#### <a id='toc2_1_3_4_'></a>[Loop through the available pages](#toc0_)"
       ]
     },
     {
@@ -767,7 +768,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# <a id='toc3_'></a>[References & Acknowledgments](#toc0_)\n",
+        "# <a id='toc3_'></a>[References/Acknowledgments](#toc0_)\n",
         "\n",
         "Thanks Goncalo Jardim for the main class structure and code to scrape Linkedin job posts."
       ]
