Update inferential stats ToC

--- a/week 7/D3_inferential_statistics_revision.ipynb
+++ b/week 7/D3_inferential_statistics_revision.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
     "- [What is statistics? (reminder)](#toc1_)    \n",
@@ -15,9 +11,13 @@
     "  - [Sample versus Population](#toc3_1_)    \n",
     "    - [How do we choose a sample wisely?](#toc3_1_1_)    \n",
     "    - [Sampling methods](#toc3_1_2_)    \n",
-    "  - [Inferential Statistics gone wrong: Dunning-Kruger effect](#toc3_2_)    \n",
-    "- [Resources](#toc4_)    \n",
-    "- [References/Acknowledgments](#toc5_)    \n",
+    "- [Let's infer](#toc4_)    \n",
+    "  - [Sample mean](#toc4_1_)    \n",
+    "  - [Sample standard deviation](#toc4_2_)    \n",
+    "  - [Mean and Standard Deviation of the Sampling Distribution](#toc4_3_)    \n",
+    "- [Central limit theorem](#toc5_)    \n",
+    "- [Resources](#toc6_)    \n",
+    "- [References/Acknowledgments](#toc7_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -31,11 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# <a id='toc1_'></a>[What is statistics? (reminder)](#toc0_)"
    ]
@@ -65,11 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# <a id='toc2_'></a>[Why statistics?](#toc0_)"
    ]
@@ -102,11 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# <a id='toc3_'></a>[Inferential Statistics](#toc0_)"
    ]
@@ -124,11 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
     "## <a id='toc3_1_'></a>[Sample versus Population](#toc0_)"
    ]
@@ -188,11 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "source": [
     "### <a id='toc3_1_1_'></a>[How do we choose a sample wisely?](#toc0_)"
    ]
@@ -270,11 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### <a id='toc3_1_2_'></a>[Sampling methods](#toc0_)"
    ]
@@ -351,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Let's infer"
+    "# <a id='toc4_'></a>[Let's infer](#toc0_)"
    ]
   },
   {
@@ -374,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample mean"
+    "## <a id='toc4_1_'></a>[Sample mean](#toc0_)"
    ]
   },
   {
@@ -502,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample standard deviation"
+    "## <a id='toc4_2_'></a>[Sample standard deviation](#toc0_)"
    ]
   },
   {
@@ -566,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mean and Standard Deviation of the Sampling Distribution"
+    "## <a id='toc4_3_'></a>[Mean and Standard Deviation of the Sampling Distribution](#toc0_)"
    ]
   },
   {
@@ -635,7 +611,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Central limit theorem"
+    "# <a id='toc5_'></a>[Central limit theorem](#toc0_)"
    ]
   },
   {
@@ -777,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a id='toc4_'></a>[Resources](#toc0_)\n",
+    "# <a id='toc6_'></a>[Resources](#toc0_)\n",
     "\n",
     "- [Likelihood vs Probability - StatQuest](https://www.youtube.com/watch?v=pYxNSUDSFH4) - 5 min\n",
     "- [Probability Distributions - StatQuest](https://www.youtube.com/watch?v=oI3hZJqXJuc) - 5 min\n",
@@ -790,7 +766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a id='toc5_'></a>[References/Acknowledgments](#toc0_)"
+    "# <a id='toc7_'></a>[References/Acknowledgments](#toc0_)"
    ]
   },
   {
