Add train-test scoring for last 2 boosting models

--- a/week 18/D1_ensemble_methods_revision.ipynb
+++ b/week 18/D1_ensemble_methods_revision.ipynb
@@ -554,7 +554,8 @@
         "                                   random_state=1 # tastes like chicken\n",
         "                                   )\n",
         "gb_reg.fit(X_train, y_train)\n",
-        "gb_reg.score(X_test,y_test)"
+        "print('Train score:', gb_reg.score(X_train, y_train))\n",
+        "print('Test score:', gb_reg.score(X_test, y_test))"
       ]
     },
     {
@@ -588,7 +589,8 @@
         "\n",
         "xgb_reg = xgboost.XGBRegressor(max_depth=5)\n",
         "xgb_reg.fit(X_train, y_train)\n",
-        "xgb_reg.score(X_test,y_test)"
+        "print('Train score:', xgb_reg.score(X_train, y_train))\n",
+        "print('Test score:', xgb_reg.score(X_test, y_test))"
       ]
     },
     {
