Add NLP lessons

--- a/week 22/D1_unsupervised_learning_revision.ipynb
+++ b/week 22/D1_unsupervised_learning_revision.ipynb
@@ -1046,7 +1046,9 @@
         "PCA by StatQuest:\n",
         "- [Main ideas (5 min)](https://www.youtube.com/watch?v=HMOI_lkzW08)\n",
         "- [Step-by-step (22 min)](https://www.youtube.com/watch?v=FgakZw6K1QQ)\n",
-        "- [Practical Tips (8 min)](https://www.youtube.com/watch?v=oRvgq966yZg)"
+        "- [Practical Tips (8 min)](https://www.youtube.com/watch?v=oRvgq966yZg)  \n",
+        "\n",
+        "[t-SNEs by StatQuest (12 min)](https://www.youtube.com/watch?v=NEaUSP4YerM)"
       ]
     },
     {
